# rust-train

./: README.md
catr/src/: main.rs
catr/tests/: cli.rs
catr/tests/expected/: all.b.out  all.n.out  all.out
catr2/: Cargo.toml
catr2/src/: main.rs
catr2/tests/: cli.rs
catr3/: Cargo.toml
catr3/src/: main.rs
catr3/tests/: cli.rs
echor/: Cargo.toml  err  readme.md
echor/src/: main.rs
echor/tests/: cli.rs
echor2/: Cargo.toml  readme.md
echor3/: Cargo.toml  err
echor3/src/: main.rs
echor3/tests/: cli.rs
fmt/src/: main.rs
hello/: readme.md
hello-world2/: Cargo.toml
hello-world4/: Cargo.toml
hello/tests/: cli.rs
hello2/: Cargo.toml
hello2/tests/: cli.rs
