[package]
name = "catr3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
# 概要: エラーハンドリングを簡素化するためのクレートです。
# 機能: 簡単にエラーを生成し、様々なエラー型を単一のエラー型に変換できます。また、エラーメッセージをスタックトレースと共に提供することもできます。

clap = { version = "4.5.0", features = ["derive"]}
# 概要: コマンドライン引数の解析と管理を簡単にするためのクレートです。
# 機能: コマンドライン引数を簡単に定義し、解析するための機能を提供します。derive機能を使用することで、構造体に属性を追加して引数を自動的に解析できます。

[dev-dependencies]
assert_cmd = "2.0.13"
# 概要: コマンドラインツールのテストを容易にするためのクレートです。
# 機能: コマンドラインプログラムの実行と、その出力や終了コードのアサーションを簡単に行えます。
predicates = "3.0.4"
# 概要: テストで使うための様々な述語を提供するクレートです。
# 機能: 文字列や数値、ファイルの存在など、様々な条件を簡単にチェックできます。assert_cmdと組み合わせて使うことが多いです。
pretty_assertions = "1.4.0"
# 概要: テストのアサーションエラーメッセージを見やすくするためのクレートです。
# 機能: 標準のassert_eq!などのマクロを置き換えて、違いを見やすくカラー表示します。
rand = "0.8.5"
# 概要: ランダムな数値や値を生成するためのクレートです。
# 機能: 乱数生成器や様々な乱数分布に基づく乱数生成機能を提供します。
